# mini-groundstation

./: .gitignore  README.md  compile.sh
.devcontainer/: Dockerfile  Dockerfile1  devcontainer.json  devcontainer.json.template
src/comm_test/comm_test/: CMakeLists.txt  package.xml
src/comm_test/comm_test/cmake/: FetchDependencies.cmake
src/comm_test/comm_test/src/: CMakeLists.txt  volleyball_node.cpp
src/simulation/simulation/: CMakeLists.txt
src/simulation/simulation/cmake/: fetchcontent_declare.cmake  json.cmake  opencv.cmake
src/simulation/simulation/src/core/: BatteryCollector.cpp  BatteryCollector.hpp  CMakeLists.txt  CollectedData.cpp  CollectedData.hpp  CsvWriter.cpp  CsvWriter.hpp  DjiCollector.cpp  DjiCollector.hpp  ImagesCollector.cpp  ImagesCollector.hpp  SharedData.cpp  SharedData.hpp  TelemetryCollector.cpp  TelemetryCollector.hpp  TimeCollector.cpp  TimeCollector.hpp  collect_data_node.cpp  collect_data_node.hpp  types.hpp  utils.cpp  utils.hpp
src/simulation/simulation/src/offline_genertor/: CMakeLists.txt  CsvReader.cpp  CsvReader.hpp  DataAggregator.cpp  DataAggregator.hpp  Settings.hpp  generate_depth.cpp  utils.cpp  utils.hpp
